Address SonarQube issues